--- a/_sass/xixia.scss
+++ b/_sass/xixia.scss
@@ -35,6 +35,6 @@ $nav-bar-brand-hover-color: $link-color-1;
 
 
 @import 
-    "xixia/theme",
-    "xixia/syntax"
+    "./xixia/theme",
+    "./xixia/syntax"
 ;
